
*****************************
   MyBlitzortung Changelog
*****************************

Version 0.5.1 (2011-06-23)
--------------------------
- added some overlay templates (radar, blids, euclid - for private internal usage only!)
- new: antenna bearing on ratio map
- maximum strike per tile setting
- added timout in track detection to prevent php-failure

Version 0.5 (2011-06-19)
--------------------------
- new: custom overlays for google map (not perfect: it lies over the strike overlay)
- new: border overlays for static maps, to see the borders even if there's much lightning
- new: strike counter in dynamic map
- new: auto login with cookie
- new: caching now with subdirectories (disable with BO_CACHE_SUBDIRS --> false)
- new: mini europe map
- new: strike tracks (very experimental)
- small enhancements and fixes

Version 0.4.8d (2011-06-12)
---------------------------
- new: map of Bavaria included
- new: internal graph average strike distance by time (url: blitzortung.php?graph_statistics=distance)
- new: error message when cache dir is not writeable
- fix: installation
- fix: no error when database port defined as empty string or zero
- other minor fixes

Version 0.4.8a (2011-06-08)
---------------------------
- fix: corrected density display and values on density maps 
- other minor improvments
- README revised
- MyBo site is now www.myblitzortung.de

Version 0.4.8 (2011-06-06)
--------------------------
- improved: europe map now shows north of europe (for our Finnish participants) and some color changes
- changed density area for the new map, so you should clear the density table (you will be asked on update)

Version 0.4.7 (2011-06-06)
--------------------------
- removed BO_UTF8 and BO_FILE from the example config.php 
- new: logged in users with user level "setting" can see GPS info even it is disabled with BO_SHOW_GPS_INFO = false
- new: circles around MyBo stations
- new: added BO_DB_PORT to change port of MySQL